tests/fixtures/valid/builtins/print.py
# Valid print() calls
# Auto-generated by scripts/generate_tests.py

b0_print_int = print(1)
b1_print_float = print(1.0)
b2_print_bool = print(True)
b3_print_str = print("hello")
b4_print_bytes = print(b"hello")
b5_print_list = print([1, 2, 3])
b6_print_dict = print({"a": 1})
b7_print_set = print({1, 2, 3})
b8_print_none = print(None)

# Print all variables
print("b0_print_int:", b0_print_int)
print("b1_print_float:", b1_print_float)
print("b2_print_bool:", b2_print_bool)
print("b3_print_str:", b3_print_str)
print("b4_print_bytes:", b4_print_bytes)
print("b5_print_list:", b5_print_list)
print("b6_print_dict:", b6_print_dict)
print("b7_print_set:", b7_print_set)
print("b8_print_none:", b8_print_none)

print("print() tests passed!")
