tests/fixtures/invalid/pow_float_set_bytes.py
# Cannot call pow() with Float, Set[int], Bytes
x = pow(1.0, {1, 2, 3}, b"hello")
